<resources>
    <string name="app_name">ListView</string>
    <string name="n">Đồ Ăn</string>
    <string name="item_1">Item 1</string>
    <string name="_50">$50</string>
    <string name="add_item">Add Item</string>
    <string name="pets">Pets</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="pressure">Pressure</string>
</resources>