<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:padding="20dp"
    tools:context=".ItemDetailActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/imageView_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/n"
        android:scaleType="centerCrop"
        android:src="@drawable/mon1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/item_1"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_item" />

    <TextView
        android:id="@+id/textView_price_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/_50"
        android:textColor="@color/blue_200"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textView_title_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView_description_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_1"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/textView_price_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/imageView_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_baseline_circle_24"
        android:contentDescription="@string/add_item"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginEnd="25dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>